Fix invisible checkboxes

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -591,14 +591,14 @@ input[type=checkbox].new_checkbox {
 
 .label-checkbox .box {
    top: -2px;
-   background-color: var(--content-background-color);
+   background-color: #E6E6E6;
    border-radius: 3px;
    height: 16px;
    width: 16px;
 }
 
 .subheader .box, th .label-checkbox .box {
-   background-color: var(--content-background-color);
+   background-color: #D0D0D0;
    border: 0;
 }
 
